[package]
name = "supplier_kit"
version = "0.1.1"
edition = "2024"
authors = ["Jerry Maheswara <jerrymaheswara@gmail.com>"]
description = "A modular toolkit for managing and grouping dynamic data suppliers."
license = "Apache-2.0"
repository = "https://github.com/jerry-maheswara-github/supplier_kit"
documentation = "https://docs.rs/supplier_kit"
readme = "README.md"
keywords = ["supplier", "integration", "callback"]
categories = ["web-programming"]

[dependencies]
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"